GNOME Bugzilla – Bug 516177
Desktop background does not honor EXIF orientation/rotation tag
Last modified: 2017-05-30 16:39:49 UTC
Please describe the problem: If you choose a JPEG image in the Background tab of the Appearance Manager that has an EXIF rotation bit set (such as from the F-Spot photo manager), the image will be shown with the correct rotation in the selector, but will not be rotated correctly when actually applied to the desktop. Steps to reproduce: 1. Take any JEPG image 2. Rotate with F-Spot (enable "Write metadata to file") 3. Select this image with the Appearance Manager 4. Note that the image appears correctly rotated in the dialog 5. Close the Appearance Manager and view the desktop 6. Note that the image does *not* appear correctly rotated on the desktop Actual results: The correct image is visible on the desktop, but it is not rotated. Expected results: I expected the correct image to both be visible and correctly rotated. Does this happen every time? Yes. Other information: I am running a stock, freshly-installed Ubuntu 7.10 desktop installation. I installed using the "Alternate Install CD" and have enabled full-disk encryption.
That's actually a nautilus bug.
This bug is still not fixed! I can confirm that even in GNOME/Nautilus from Ubuntu 8.10 the background is not being rotated correctly.
Nautilus still does not properly handle exif rotation data. Images are properly rotated in most tools and thumbnails etc... It is PITA to have to move images out of F-spot, etc.. disable auto-rotation, rotate and resave, just to update the desktop background.
I am running Ubuntu 12.04 (dev at the moment) and so far as I can see we are in the same situation. I just found this bug trying to change the background with a "simple" picture taken from my iPhone 4S. As Matthew said it is a real PITA!
Does this still occur?
Oliver, David, Matthew: Does this still occur in 3.14?
This github has examples pictures in different orientations: https://github.com/recurser/exif-orientation-examples
This is still open in 3.22. In additional to mentioned sample images a sample explanation of the Orientation tag in exif: https://beradrian.wordpress.com/2008/11/14/rotate-exif-images/ Without that all pictures with non-default orientation have to be rotated externally (e.g. with exiftran) to look properly in Gnome.
(In reply to Marcin Zajaczkowski from comment #8) > This is still open in 3.22. > > In additional to mentioned sample images a sample explanation of the > Orientation tag in exif: > https://beradrian.wordpress.com/2008/11/14/rotate-exif-images/ > > Without that all pictures with non-default orientation have to be rotated > externally (e.g. with exiftran) to look properly in Gnome. If you want this fixed in gnome-shell, you'll need to open a bug against gnome-shell. The code here is only used by the Background panel, and maybe nautilus' desktop window.
Thanks for a tip. I created bug 776782.
Created attachment 352797 [details] [review] gnome-bg: handle EXIF orientations I have already made a patch for mutter https://bugzilla.gnome.org/show_bug.cgi?id=783125 and one for the gnome-control-center https://bugzilla.gnome.org/show_bug.cgi?id=783200 Here is a patch for the previews in gnome-control-center's background panel.
Review of attachment 352797 [details] [review]: ::: libgnome-desktop/gnome-bg.c @@ +898,3 @@ { GdkRectangle rect; + GdkPixbuf *pixbuf, *rotated; I'd prefer the "rotated" variable to be declared at the top of each block where it's used. @@ +2559,3 @@ else { orig = gdk_pixbuf_new_from_file (filename, NULL); + unneeded whitespace change.
Created attachment 352883 [details] [review] gnome-bg: handle EXIF orientations
Review of attachment 352883 [details] [review]: I also made some changes to the commit message. ::: libgnome-desktop/gnome-bg.c @@ +2568,3 @@ + g_object_unref (orig); + orig = rotated; + } I fixed the declarations that weren't at the top of the block.
Created attachment 352889 [details] [review] gnome-bg: Handle EXIF orientations Apply the orientation of the images provided as metadata in the EXIF tags when loading images for display as background images (such as in gnome-control-center's Background panel).
Attachment 352889 [details] pushed as d4fa248 - gnome-bg: Handle EXIF orientations