gnome-bg: Handle EXIF orientations

Apply the orientation of the images provided as metadata in the EXIF
tags when loading images for display as background images (such as
in gnome-control-center's Background panel).

https://bugzilla.gnome.org/show_bug.cgi?id=516177